--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -58,7 +58,7 @@
                 </div>
                 
                 <div class="submit-btn-container">
-                    <input type="submit" value="Cadastrar" class="submit-btn">
+                    <input type="submit" value="Continuar" class="submit-btn">
                 </div>
             </form>
         </div>
