--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -19,7 +19,9 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(270deg, #D2122E, #E52B50);
+    /* background-image: linear-gradient(270deg, #D2122E, #E52B50); */
+    /* background-image: linear-gradient(270deg, #d2d2d2, #bcbcbc); */
+    background-image: linear-gradient(270deg, #16161C, #343434);
 }
 
 .register-container{
@@ -47,15 +49,16 @@ body{
     left: 0;
     right: 0;
     
-    background-color: #fd5c63;
-    border-bottom: 1px solid #FF0800;
+    /* background-color: #fd5c63; */
+    background-color: #D3D3D3;
+    border-bottom: 1px solid #b0b0b0;
     border-radius: 0px 8px 0px 0px;
     
     padding: 5px;
 }
 
 .register-title{
-    color: #58111A;
+    color: #2d2d2d;
 }
 
 .register-radio-btn-container, .radio-btn{
