--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -63,20 +63,21 @@
 
                 <div class="city-container">
                     <i class="fa-solid fa-location-dot" style="color: #fd5c63;"></i>
-                    <input list="cities-list" class="city-ipt" placeholder="Cidade de atividade">
+                    <input list="cities-list" class="city-ipt" placeholder="Cidade de atividade" name="cityInput">
                     <datalist id="cities-list">
-                        <% foundUniversities.forEach(function(univ) { %>
-                        <option value="<%= univ.university_name %>">
+                        <% foundCities.forEach(function(city) { %>
+                        <option value="<%= city.city_name %>">
                         <% }); %>
                     </datalist>
                 </div>
                 
                 <div class="state-container">
-                    <i class="fa-solid fa-location-arrow" style="color: #fd5c63;"></i>                    <input list="states-list" class="state-ipt" placeholder="Estado de atividade">
+                    <i class="fa-solid fa-location-arrow" style="color: #fd5c63;"></i>
+                    <input list="states-list" class="state-ipt" name="stateInput" placeholder="Estado de atividade">
                     <datalist id="states-list">
-                        <option value="a">
-                        <option value="b">
-                        <option value="c">
+                        <% foundStates.forEach(function(state) { %>
+                        <option value="<%= state.state_name %>">
+                            <% }); %>
                     </datalist>
                 </div>
 
@@ -104,5 +105,3 @@
     </div>
 </body>
 </html>
-
-<!-- #fd5c63 -->
