--- a/src/public/css/registerUser.css
+++ b/src/public/css/registerUser.css
@@ -1,9 +1,7 @@
-/* Reset */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto';
 }
 
 body{
@@ -11,61 +9,78 @@ body{
     width: 100%;
 }
 
-.main-container{
+.academic-logo{
+    width: 10%;
+    height: 25%;
+    object-fit: cover;
+    margin-left: 2vw;
+}
+
+i {
+    width: 20px;
+    height: 15px;
+}
+
+
+.main-header{
     width: 100%;
-    height: 100%;
     
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(270deg, #16161C, #343434);
-}
-
-.register-container{
-    border: 1px solid #ededed;
-    border-radius: 0px 8px 0px 8px;
-    padding: 90px;
-    position: relative;
     
-    background-image: linear-gradient(120deg, #fff, #D3D3D3);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    background-color: #F0F0F0;
+    border-bottom: 1px solid #bcbcbc;
 }
 
-.form-data > div {
-    padding: 5px;
-}
-
-.register-title-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+.header-title{
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-weight: 600;
     position: absolute;
-    top: 0px;
-    left: 0;
-    right: 0;
-    
-    background-color: #D3D3D3;
-    border-bottom: 1px solid #b0b0b0;
-    border-radius: 0px 8px 0px 0px;
-    
-    padding: 5px;
+    right: 45%
+
 }
 
-.register-title{
-    color: #2d2d2d;
+.main-container{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    height: 100%;
+    padding: 20px;
+    background-color: #e0e0e0;
 }
+
+.main-container > *{
+    margin-bottom: 5px;
+}
+
+.form-data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+    width: 100%;
+}
+
+input::placeholder, .form-data{
+    font-size: 18px;
+}
+
+input[type=text], input[type=email], input[type=password], input[type=date], input[name=universityInput], input[name=cityInput], input[name=stateInput] {
+    width: 15vw;
+}
+
 
 .radio-btn, .activity-container{
     display: flex;
     flex-direction: row;
-    margin-right: 5%;
 }
 
-.radio-btn > label{
-    margin-left: 4%;
+.activity-container{
+    justify-content: center;
+    align-items: center;
 }
 
 .submit-btn-container{
@@ -74,33 +89,59 @@ body{
     justify-content: center;
 }
 
-.submit-btn{
-    padding: 11px;
-    width: 60%;
-    border-radius: 5%;
-    cursor: pointer;
-    
-    background-color: #fd5c63;
-    border: 1px solid #FF0800;
-    color: #fff;
-    transition: 0.5s;
-}
-.submit-btn:hover{
-    color: #ededed;
-    background-color: #FF0800;
-}
-
 .password-container > div{
     margin-bottom: 2px;
 }
 
-.name-ipt, .email-ipt, .cpf-ipt, .birth-ipt, .univ-ipt, .city-ipt, .state-ipt{
-    border: 1px solid #989898;
+.name-ipt, .email-ipt, .cpf-ipt, .univ-ipt, .city-ipt, .state-ipt{
+    border: 1px solid #F8F8F8;
     border-radius: 4.5px;
-    padding: 3.5px;
+    padding: 12px;
+    transition: 0.5s;
+}
+.name-ipt:hover, .email-ipt:hover, .cpf-ipt:hover, .birth-ipt:hover, .univ-ipt:hover, .city-ipt:hover, .state-ipt:hover{
+    border: 1px solid #707070;
+    transition: 0.5s;
 }    
 
-i {
-    width: 20px;
-    height: 15px;
+.birth-ipt{
+    padding: 3.5px 9.5%;
+    border: 1px solid #F8F8F8;
+    border-radius: 4.5px;
+    transition: 0.5s;
+}
+
+.radio-btn{
+    display: flex;
+    flex-direction: row;
+    padding: 5px 3px;
+    align-items: center;
+    font-family: 'Roboto';
+}
+
+input{
+    margin: 0.4vh 0px;
+}
+
+.submit-btn{
+    padding: 10px 3.1vw;
+    border-radius: 5%;
+    cursor: pointer;  
+    border: none;
+    transition: 0.5s;
+}
+
+.submit-btn:hover{
+    background-color: #fd5c63;
+    color: #fff;
+    transition: 0.5s;
+}
+
+
+input:focus{
+    outline: none;
+}
+
+input[type=radio]{
+    margin-left: 0.5vw;
 }
