--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -4,64 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="/css/register.css" type="text/css">
-
+    
+    <link rel="stylesheet" href="/css/register.css">
+    
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-
+    
     <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
+    <div class="main-header">
+        <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
+        <p class="header-title">Registro</p>
+    </div>
+
     <div class="main-container">
-        <div class="register-container">
-            <div class="register-title-container">
-                <h1 class="register-title">REGISTRO</h1>
+        <form action="/v1/register" method="POST"class="form-data">
+            <div class="name-container">
+                <i class="fa-regular fa-user" style="color: #fd5c63;"></i>
+                <input type="text" name="nameInput" class="name-ipt" placeholder="Nome">
             </div>
-            
-            <form action="/v1/register" method="POST" class="form-data">
-                <div class="name-container">
-                    <i class="fa-regular fa-user" style="color: #fd5c63;"></i>
-                    <input type="text" name="nameInput" class="name-ipt" placeholder="Nome" required >
+
+            <div class="email-container">
+                <i class="fa-regular fa-envelope" style="color: #fd5c63;"></i>
+                <input type="email" name="emailInput" class="email-ipt" placeholder="Email">
+            </div>
+
+            <div class="password-container">
+                <div class="pw">
+                    <i class="fa-solid fa-unlock" style="color: #fd5c63;"></i>
+                    <input type="password" name="pwInput" class="pw-ipt" placeholder="Senha">
                 </div>
-                
-                <div class="email-container">
-                    <i class="fa-regular fa-envelope" style="color: #fd5c63;"></i>
-                    <input type="email" name="emailInput" class="email-ipt" placeholder="Email" required >  
+            </div>
+
+            <div class="confirm-pw">
+                <i class="fa-solid fa-lock" style="color: #fd5c63;"></i>
+                <input type="password" name="confirmPwInput" class="confirm-pw-ipt" placeholder="Confirme a senha">
+            </div>
+
+            <div class="register-radio-btn-container">
+                <div class="radio-btn">
+                    <label class="radio-label">Pessoa</label>
+                    <input type="radio" value="pessoa" name="optradio" class="radio-input">
                 </div>
 
-                <div class="password-container">
-                    <div class="pw">
-                        <i class="fa-solid fa-unlock" style="color: #fd5c63;"></i>
-                        <input type="password" name="pwInput" class="pw-ipt" placeholder="Senha" required >
-                    </div>
-                    
-                    <div class="confirm-pw">
-                        <i class="fa-solid fa-lock" style="color: #fd5c63;"></i>
-                        <input type="password" name="confirmPwInput" class="confirm-pw-ipt" placeholder="Confirme a Senha" required >
-                    </div>
-                    
+                <div class="radio-btn">
+                    <label class="radio-label">Empresa</label>
+                    <input type="radio" value="empresa" name="optradio" class="radio-input">
                 </div>
-                
-                <div class="register-radio-btn-container">
-                    <div class="radio-btn">
-                        <label class="radio-label">Pessoa</label>
-                        <input type="radio" value="pessoa" name="optradio" class="radio-input" >
-                    </div>
+            </div>
 
-                    <div class="radio-btn">
-                        <label class="radio-label">Empresa</label>
-                        <input type="radio" value="empresa" name="optradio" class="radio-input" >
-                    </div>
-                </div>
-                
-                <div class="submit-btn-container">
-                    <input type="submit" value="Continuar" class="submit-btn">
-                </div>
-            </form>
-        </div>
+            <div class="submit-btn-container">
+                <input type="submit" value="Continuar" class="submit-btn">
+            </div>
+        </form>
     </div>
 </body>
 </html>
