--- a/src/views/registerCompany.ejs
+++ b/src/views/registerCompany.ejs
@@ -3,71 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro</title>
+    
     <link rel="stylesheet" href="/css/registerCompany.css">
-
-
+    
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    
+    <!-- FONT AWESOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="main-container">
-        <div class="register-container">
-            <div class="register-title-container">
-                <h1 class="register-title">REGISTRO de EMPRESA</h1>
-            </div>
+    <div class="main-header">
+        <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
+        <p class="header-title">Registro de Empresa</p>
+    </div>
 
-            <form action="/v1/api/register/company" method="POST" class="form-data">
-                <div class="name-container">
-                    <i class="fa-regular fa-user" style="color: #fd5c63;"></i>
-                    <% if (context.nameInput) { %>
+    <div class="main-container">
+        <form action="/v1/api/register/company" method="POST"class="form-data">
+            <div class="name-container">
+                <i class="fa-regular fa-user" style="color: #fd5c63;"></i>
+                <% if (context.nameInput) { %>
                     <input type="text" name="nameInput" class="name-ipt" value="<%= context.nameInput %>" required >
                     <% } else { %>
                         <input type="text" name="nameInput" class="name-ipt" placeholder="Nome" required >
                     <% } %>
-                </div>
-                
-                <div class="email-container">
-                    <i class="fa-regular fa-envelope" style="color: #fd5c63;"></i>
-                    <% if (context.emailInput){ %>
-                        <input type="email" name="emailInput" class="email-ipt" placeholder="Email" value="<%= context.emailInput %>" required>
-                    <% } else { %>
-                    <input type="email" name="emailInput" class="email-ipt" placeholder="Email" required >
-                    <% } %>
-                    </div>
+            </div>
 
-                <div class="cnpj-container">
-                    <i class="fa-solid fa-id-card-clip" style="color: #fd5c63;"></i>
-                    <input type="text" name="cnpjInput" class="cnpj-ipt" placeholder="CNPJ" required>
-                </div>
-                
-                <div class="city-container">
-                    <i class="fa-solid fa-location-dot" style="color: #fd5c63;"></i>
-                    <input list="cities-list" name="cityInput" class="city-ipt" placeholder="Cidade de atividade" required>
-                    <datalist id="cities-list">
-                        <% foundCities.forEach(function(city) { %>
-                        <option value="<%= city.city_name %>">
-                        <% }); %>
-                    </datalist>
-                </div>
-                
-                <div class="state-container">
-                    <i class="fa-solid fa-location-arrow" style="color: #fd5c63;"></i>                    
-                    <input list="states-list" class="state-ipt" name="stateInput" placeholder="Estado de atividade" required>
-                    <datalist id="states-list">
-                        <% foundStates.forEach(function(state) { %>
-                        <option value="<%= state.state_name %>">
-                            <% }); %>
-                    </datalist>
-                </div>
-                <div class="submit-btn-container">
-                    <input type="submit" value="Cadastrar" class="submit-btn" required >
-                </div>
-            </form>
+            <div class="email-container">
+                <i class="fa-regular fa-envelope" style="color: #fd5c63;"></i>
+                <% if (context.emailInput){ %>
+                    <input type="email" name="emailInput" class="email-ipt" placeholder="Email" value="<%= context.emailInput %>" required>
+                <% } else { %>
+                <input type="email" name="emailInput" class="email-ipt" placeholder="Email" required >
+                <% } %>
         </div>
+
+            <div class="cnpj-container">
+                <i class="fa-solid fa-id-card-clip" style="color: #fd5c63;"></i>
+                <input type="text" name="cnpjInput" class="cnpj-ipt" placeholder="CNPJ" required>
+            </div>
+            
+            <div class="city-container">
+                <i class="fa-solid fa-location-dot" style="color: #fd5c63;"></i>
+                <input list="cities-list" name="cityInput" class="city-ipt" placeholder="Cidade de atividade" required>
+                <datalist id="cities-list">
+                    <% foundCities.forEach(function(city) { %>
+                    <option value="<%= city.city_name %>">
+                    <% }); %>
+                </datalist>
+            </div>
+            
+            <div class="state-container">
+                <i class="fa-solid fa-location-arrow" style="color: #fd5c63;"></i>                    
+                <input list="states-list" class="state-ipt" name="stateInput" placeholder="Estado de atividade" required>
+                <datalist id="states-list">
+                    <% foundStates.forEach(function(state) { %>
+                    <option value="<%= state.state_name %>">
+                        <% }); %>
+                </datalist>
+            </div>
+            <div class="submit-btn-container">
+                <input type="submit" value="Cadastrar" class="submit-btn" required >
+            </div>
+
+        </form>
     </div>
 </body>
 </html>
