--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -17,19 +17,29 @@
 </head>
 <body>
     <div class="main">
+        <% if(context.auth) { %>
         <div class="main-header">
             <div class="home-container">
-                <a href="/v1/"><p class="home-btn">Home</p></a>
+                <a class="home-btn" href="/v1/"><p class="home-btn">Home</p></a>
             </div>
             <div class="academic-logo-container">
                 <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
             </div>
-            <% if(context.auth) { %>
             <div class="edit-container">
                     <p class="edit-btn">Editar</p>
                 </div>
-            <% } %>
         </div>
+        <% } else { %>
+            <div class="main-header">
+                <div class="home-container">
+                    <a class="home-btn" href="/v1/"><p class="home-btn">Home</p></a>
+                </div>
+                <div class="academic-logo-container-noauth">
+                    <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
+                </div>
+            </div>
+            <% } %>
+            
         <div class="main-profile-content">
             <div class="profile-image">
                 <img src="data:<%= context.mimeType %>;base64,<%= context.profileImage.toString('base64') %>" alt="profile-image" class="profile-main-img" >
