--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -48,13 +48,13 @@
 
             <div class="register-radio-btn-container">
                 <div class="radio-btn">
-                    <label class="radio-label">Pessoa</label>
-                    <input type="radio" value="pessoa" name="optradio" class="radio-input">
+                    <label class="radio-label">Masculino</label>
+                    <input type="radio" value="M" name="userSex" class="radio-input">
                 </div>
-
+                
                 <div class="radio-btn">
-                    <label class="radio-label">Empresa</label>
-                    <input type="radio" value="empresa" name="optradio" class="radio-input">
+                    <label class="radio-label">Feminino</label>
+                    <input type="radio" value="F" name="userSex" class="radio-input">
                 </div>
             </div>
 
