--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -85,18 +85,40 @@
                 </datalist>
             </div>
 
+            <div class="user-course">
+                <i class="fa-solid fa-graduation-cap" style="color: #fd5c63;"></i>
+                <input type="text" name="userCourse" class="course-ipt" placeholder="Curso de graduação" required>
+            </div>
+
+            <div class="activity-title">
+                <p class="title-desc">Atividade</p>
+            </div>
             <div class="activity-container">
                 <div class="radio-btn">
-                    <input type="radio" name="optradio" class="radio-input" value="bolsista">
+                    <input type="radio" name="userActivity" class="radio-input" value="bolsista">
                     <label class="radio-label">Bolsista</label>
                 </div>
                 <div class="radio-btn">
-                    <input type="radio" name="optradio" class="radio-input" value="pesquisador">
+                    <input type="radio" name="userActivity" class="radio-input" value="pesquisador">
                     <label class="radio-label">Pesquisador</label>
                 </div>
                 <div class="radio-btn">
-                    <input type="radio" name="optradio" class="radio-input" value="estudante">
+                    <input type="radio" name="userActivity" class="radio-input" value="estudante">
                     <label class="radio-label">Estudante</label>
+                </div>
+            </div>
+
+            <div class="activity-title">
+                <p class="title-desc">Escolaridade</p>
+            </div>
+            <div class="activity-container">
+                <div class="radio-btn">
+                    <input type="radio" name="userGrade" class="radio-input" value="graduacao">
+                    <label class="radio-label">Graduação</label>
+                </div>
+                <div class="radio-btn">
+                    <input type="radio" name="userGrade" class="radio-input" value="pos-graduacao">
+                    <label class="radio-label">Pós Graduação</label>
                 </div>
             </div>
 
