--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -1,28 +1,16 @@
-
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-size: 21px;
+    font-family: 'Roboto', sans-serif;
 }
 
-body{
-    background-color: #F0F0F0;
-    font-family: 'Roboto';
-    width: 100%;
+img{
+    width: 150px;
 }
 
 a{
     text-decoration: none !important;
-}
-
-.main{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    min-height: 100vh;
-    width: 100%;
-    justify-content: space-between;
 }
 
 .main-header{
@@ -33,81 +21,56 @@ a{
 
     width: 100%;
     height: 10vh;
-    background-color: #e0e0e0;
-    border-bottom: 1px solid #707070;
-
-    /* position: relative; */
+    /* background-color: #282828; */
+    background-color: #181818;
+    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
 }
 
 .home-container{
-    border: 1px solid #00FF40;
+    border: 1px solid #00FA9A;
     background-color: #00FA9A;
     border-radius: 5px;
-    color: #fff;
-    padding: 8px;
+    padding: 15px;
     margin-left: 8%;
     transition: 0.5s;
+    color: #fff;
 }
 
 .home-container > a{
     color: #fff;
-    transition: 0.5s;
-}
-.home-container > a:hover{
-    color: #fff;
-    transition: 0.5s;
 }
 
 .home-container:hover{
     border: 1px solid #00FF40;
-    background-color: #00FF40;
+    color: #fff;
+    background-color: #1B4D3E;
     transition: 0.5s;
     cursor: pointer;
 }
 
-.home-btn{
-    width: 100%;
-    /* padding: 8px; */
-}
-
-.academic-logo-container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    position: relative;
-    /* right: 33%; */
-    right: 1%;
-}
-
-.academic-logo-container-noauth{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    position: relative;
-    right: 5%;
-}
 
 .edit-container{
-    border: 1px solid black;
-    background-color: #00308F;
     color: #fff;
-    
-    border-radius: 5px;
-    padding: 8px;
+    background-color: #1E90FF;
+    border: 1px solid #1E90FF;
+    padding: 15px;
     margin-right: 8%;
-    transition: 0.5s;
+    border-radius: 5px;
+    transition: 0.3s;
 }
 .edit-container:hover{
-    background-color: #1F75FE;
-    border: 1px solid #1F75FE;
-    color: #E1EBEE;
+    color: #F0F8FF;
+    background-color: #002244;
+    border: 1px solid #7CB9E8;
     cursor: pointer;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .academic-logo-container{
-    width: 33%;
-    height: 13vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
 }
 
 .academic-logo{
@@ -118,184 +81,118 @@ a{
     margin: auto;
 }
 
-.main-profile-content{
+.main-container{
     display: flex;
     flex-direction: row;
-    flex-grow: 1;
+    border-bottom: 1px solid #707070;
+    /* background-color: #D0D0D0; */
+    /* background-image: linear-gradient(145deg, #505050, #303030); */
+    background: linear-gradient(142deg, rgba(115,115,115,1) 17%, rgba(56,56,56,1) 100%);
 }
 
-.profile-attributes{
+.profile-img-container, .profile-desc-container{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    margin: 5% 3%;
 }
 
 .profile-image{
-    margin: 7% 5%;
-}
-
-.profile-main-img{
     width: 230px;
     height: 220px;
     border-radius: 50%;
-    /* border: 3px solid #707070; */
     border: 3px solid #FEBE10;
     object-fit: cover;
-    transition: 0.5s;    
+    transition: 0.5s;
+    margin-bottom: 5%;
 }
 
-.profile-main-img:hover{
+.profile-image:hover{
     border: 3px solid #fd5c63;
     border-radius: 1px 8px 1px 8px;
     transition: 0.5s;    
 }
 
-.profile-name{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.profile-desc-container{
+    padding: 25px;
     
-    width: 50%;
-    padding: 8px;
-    margin: 10% 2%;
+    border: 1px solid #fff;
+    background-color: #A9A9A9;
+    border-radius: 8px;
+    width: 70%;
+    
+    transition: 0.5s;
+}
+.profile-desc-container:hover{
+    background-color: #ededed;
+    
+    border: 1px solid #e0e0e0;
+    border-radius: 2px;
+    
     transition: 0.5s;
 }
 
-.name{
-    font-weight: 400;
-    transition: 0.5s;
+.profile-img-container{
+    padding: 8px;
+    align-items: center;
+    width: 30%;
 }
-.name:hover{
-    font-weight: 800;
-    font-size: 22px;
-    transition: 0.5s;
+
+.university-group{
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    text-align: center;
+}
+
+.fa-graduation-cap{
+    margin-right: 8px;
+}
+
+.university-name{
+    color: #fff;
+}
+
+.profile-name{
+    margin-bottom: 3%;
+    font-weight: 400;
 }
 
 .profile-desc{
-    display: flex;
-    flex-direction: column;
-    
-    border: 1px solid #F0F0F0;
-    
-    width: 90%;
-    margin: -9% 2%;
     padding: 13px;
-    
     transition: 0.5s;
-}
-.profile-desc:hover{
-    background-color: #fff;
-    border: 1px solid #7B68EE;
-    border-radius: 8px 8px 8px 8px;
-    transition: 0.5s;
+    border-radius: 8px;
 }
 
-
-.no-intr{
-    margin-left: 3%;
+.middle-container{
+    color: #fff;
+    background-color: #b8b8b8;
+    min-height: 100vh;
 }
 
-.interest-container{
-    display: flex;
-    flex-direction: column;
-    max-width: 95%;
-    margin-left: 2%;
-    
-    margin-bottom: 20%;
-    padding: 8px;
-    
-    border: 1px solid #909090;
-    border-radius: 5px;
-    background-color: #fff;
-}
-
-.interest-title{
-    margin-left: 3%;
-    margin-bottom: 1%;
-    font-weight: 700;
-}
-
-.interest-group{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 100%; 
-    height: 100%;
-}
-
-.intr-card{
-    display: flex;
-    flex-direction: column;
-    
-    border: 1px solid #452c63;
-    background-color: #E6E6FA;
-    border-radius: 5px;
-    padding: 9px;
-    margin-left: 3%;
-    margin-bottom: 1%;
-    transition: 0.5s;
-}
-.intr-card:hover{
-    border: 1px solid #DDA0DD;
-    /* background-color: #fff; */
-    transition: 0.5s;
-    border-radius: 0px 5px 0px 5px;
-}
-
-.profile-contact{
-    display: flex;
-    flex-direction: column;
-    
-    width: 100%;
-
-    border-top: 1px solid #909090;
-    background-color: #e0e0e0;
-}
-
-.profile-contact-title{
+.project-list-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    padding: 15px;
+    flex-grow: 1;
 }
 
-.contact-container{
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 100%;
-    padding: 12px;
-    justify-content: space-between;
-}
-
-
-.contact-card{
+.list-title{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin-top: 6%;
+}
 
-    width: 45%;
+.add-btn{
     padding: 8px;
-    margin-bottom: 10px;
-    
-    border: 1px solid #707070;
-    background-color: #ededed;
-    border-radius: 4px;
-
-    transition: 0.5s;
+    border-radius: 6px;
+    transition: 0.3s;
+    margin-top: 26px;
+    background-color: #3457D5;
 }
-
-.contact-card:hover{
-    background-color: #f0f0f0;
-    border: 1px solid #FFFF00;
-    transition: 0.5s;
-}
-
-.contact-description{
-    font-weight: 500;
-}
-
-.contact-title{
-    margin: 1.5%;
+.add-btn:hover{
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    transition: 0.3s;
 }
