--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,99 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+        <!-- GOOGLE FONTS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+        
+        <!-- FONT AWESOME CDN -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+
     <link rel="stylesheet" href="/css/profile.css">
     <title><%= context.profileName %></title>
-
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    
-    <!-- FONT AWESOME CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
-    <div class="main">
-        <% if(context.auth) { %>
+    <% if(context.auth) { %>
+    <div class="main-header">
+        <div class="home-container">
+            <a href="/v1/"><p class="home-btn">Home</p></a>
+        </div>
+        <div class="academic-logo-container">
+            <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
+        </div>
+        <div class="edit-container">
+            <p class="edit-btn">Editar</p>
+        </div>
+    </div>
+    <% } else { %>
         <div class="main-header">
             <div class="home-container">
-                <a class="home-btn" href="/v1/"><p class="home-btn">Home</p></a>
+                <a href="/v1/"><p class="home-btn">Home</p></a>
             </div>
             <div class="academic-logo-container">
-                <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
-            </div>
-            <div class="edit-container">
-                    <p class="edit-btn">Editar</p>
-                </div>
-        </div>
-        <% } else { %>
-            <div class="main-header">
-                <div class="home-container">
-                    <a class="home-btn" href="/v1/"><p class="home-btn">Home</p></a>
-                </div>
-                <div class="academic-logo-container-noauth">
-                    <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
-                </div>
-            </div>
-            <% } %>
-            
-        <div class="main-profile-content">
-            <div class="profile-image">
-                <img src="data:<%= context.mimeType %>;base64,<%= context.profileImage.toString('base64') %>" alt="profile-image" class="profile-main-img" >
-            </div>
-            <div class="profile-attributes">
-                <div class="profile-name">
-                    <p class="name"><%= context.profileName %></p>
-                </div>
-                <div class="profile-desc">
-                    <p class="description"><%= context.profileDesc %></p>
-                </div>
+                <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
             </div>
         </div>
+    <% } %>
 
-        <div class="interest-container">
-            <div class="interest-title">
-                <p class="intereset-text">Tópicos de interesse</p>
+
+    <div class="main-container">
+        <div class="profile-img-container">
+            <img src="data:<%= context.mimeType %>;base64,<%= context.profileImage.toString('base64') %>" alt="profile-image" class="profile-image" >
+            <div class="university-group">
+                <i class="fa-solid fa-graduation-cap" style="color: #ff8800;"></i>
+                <p class="university-name">Universidade Estadual de Maringá</p>
+            </div>
+        </div>
+        <div class="profile-desc-container">
+            <p class="profile-name"><%= context.profileName %></p>
+            <p class="profile-desc"><%= context.profileDesc %></p>
+        </div>
+    </div>
+
+    <div class="middle-container">
+        <div class="project-list-container">
+            <div class="list-title">
+                <p class="title">Exiba seus projetos no seu perfil</p>
+                <div class="add-btn">
+                    <p class="add-btn-text">Adicionar</p>
+                </div>
             </div>
 
-            <div class="interest-group">
-            <% if(context.topics.length > 0) { %>
-                <% context.topics.forEach(function(topic) { %>
-                    <div class="intr-card">
-                        <p class="interest"> <%= topic %> </p>
-                    </div>
-                    <% }); %>
-                    <% } else { %>
-                        <div class="no-intr">
-                            <p class="intr"> Nada para ver aqui. </p>
-                        </div>
-                        <% } %>
-                        
-                    </div>
-                </div>
-                
-        <div class="profile-contact">
-            <div class="profile-contact-title">
-                <p class="contact-title">Contatos</p>
-            </div>
-            <div class="contact-container">
-                <% if(context.contacts_array.length > 0) { %>
-                    <% context.contacts_array.forEach(function(ctt) { %>
-                        <div class="contact-card">
-                            <p class="contact-description"><%= ctt.typeContactName %></p>
-                            <p class="contact-name"><%= ctt.content %> </p>
-                        </div>
-                        <% }); %>
-                        <% } else { %>
-                            <div class="no-intr">
-                                <p class="intr"> Nada para ver aqui. </p>
-                            </div>
-                        <% } %>
-
-                </div>
         </div>
     </div>
 </body>
