--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -15,7 +15,7 @@
 <body>
     <div class="float-container">
         <div class="float-left-child">
-            <img src="/images/academic-logo.png" alt="">
+            <img src="/images/white-logo.png" alt="">
             <p class="right-title"><a target="_blank" href="/v1/register" class="register">Registrar-se</a></p>
         </div>
         <div class="float-right-child">
