--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -91,138 +91,128 @@ a{
     background: linear-gradient(310deg, rgb(181 181 181) 17%, rgb(146 146 146) 100%);
 }
 
+
 .profile-img-container, .profile-desc-container{
     display: flex;
     flex-direction: column;
     margin: 5% 3%;
 }
 
-.profile-image{
-    width: 230px;
-    height: 220px;
-    border-radius: 50%;
-    border: 3px solid #FEBE10;
-    object-fit: cover;
-    transition: 0.5s;
-    margin-bottom: 5%;
-}
-
-.profile-image:hover{
-    border: 3px solid #fd5c63;
-    border-radius: 1px 8px 1px 8px;
-    transition: 0.5s;    
-}
-
-.profile-desc-container{
-    padding: 25px;
-    
-    border: 1px solid #fff;
-    background-color: #A9A9A9;
-    border-radius: 8px;
-    width: 70%;
-    
-    transition: 0.5s;
-}
-.profile-desc-container:hover{
-    background-color: #ededed;
-    
-    border: 1px solid #e0e0e0;
-    border-radius: 2px;
-    
-    transition: 0.5s;
-}
-
-.profile-img-container{
-    padding: 8px;
-    align-items: center;
-    width: 30%;
-}
-
-.university-group{
-    display: flex;
-    flex-direction: row;
-    padding: 5px;
-    text-align: center;
-}
-
-.fa-graduation-cap{
-    margin-right: 8px;
-}
-
-.university-name{
-    color: #fff;
-}
-
-.profile-name{
-    margin-bottom: 3%;
-    font-weight: 400;
-}
-
-.profile-desc{
-    padding: 13px;
-    transition: 0.5s;
-    border-radius: 8px;
-}
-
-.title{
-    color: black;
-}
-
-.add-btn-text{
-    color: #fff;
-}
-
-.middle-container{
-    color: #fff;
-    /* background-color: #b8b8b8; */
-    background-color: #e2e2e2;
-    min-height: 100vh;
-}
-
-.project-list-container{
+.upload-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px;
-    flex-grow: 1;
+    margin-top: 5%;
 }
 
-.list-title{
+.project-desc-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 6%;
+    width: 100%;
+    margin-bottom: 13%;
 }
 
-.add-btn{
-    padding: 8px;
-    border-radius: 6px;
-    transition: 0.3s;
-    margin-top: 26px;
-    background-color: #3457D5;
+.project-desc{
+    margin-bottom: 8%;
 }
-.add-btn:hover{
+
+.project-desc-txtarea{
+    width: 100%;
+    resize: none;
+    outline: none;
+}
+
+.img-input-label{
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    transition: 0.3s;
 }
 
-.project-list{
+.projects-container{
     display: flex;
     flex-direction: column;
-    margin-top: 2%;
+    align-items: center;
+    margin-top: 3%;
 }
 
-.project-container{
+.loaded-project{
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
-    padding: 8px;
+    align-items: center;
+    
+    padding: 13px;
+    margin-bottom: 5%;
+    border-radius: 8px;
+    border: 1px solid #ededed;
+
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    max-width: 50%;
+    transition: 0.2s;
+}
+
+.project-description{
+    text-align: justify;
+    max-width: 80%;
+}
+
+.project-img-loaded{
+    width: 100%;
+}
+
+.projects-title{
+    margin: 18px 0;
+}
+
+.project-image{
     margin-bottom: 5%;
 }
 
-.project-image-carrousel{
+.project-desc-title{
+    margin-bottom: 2%;
+}
+
+.img-input-label{
+    background-color: #fd5c63;
+    border-radius: red;
+    color: #fff;
+    border-radius: 5px;
+    padding: 8px;
+    transition: 0.2s;
+}
+
+.img-input-label:hover{
+    cursor: pointer;
+    background-color: #FF033E;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    transition: 0.2s;
+}
+
+.submit-container{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 15% 0;
+}
+
+.submit-btn{
+    border: none;
+    background-color: #fd5c63;
+    border-radius: 0px 8px;
+    
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    
+    color: #fff;
+    padding: 8px;
+    transition: 0.9s;
+}
+.submit-btn:hover{
+    border-radius: 8px 0px;
+    background-color: #C6011F;
+    
+    box-shadow: rgba(240, 46, 46, 0.4) 0px 5px, rgba(240, 46, 62, 0.3) 0px 10px, rgba(240, 46, 46, 0.2) 0px 15px, rgba(240, 46, 46, 0.1) 0px 20px, rgba(240, 46, 46, 0.05) 0px 25px;
+
+    transition: 0.9s;
+}
+
+input[type="file"]{
+    display: none;
 }
